// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateWorkspace.vue Should display a warning if browser is Brave 1`] = `
<div class="v-card v-sheet theme--light elevation-0">
  <div class="v-card__text">
    <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text error--text" style="display: none;"></div>
    <div class="mb-2">
      <div role="alert" class="v-alert my-2 v-sheet theme--dark warning">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
          <div class="v-alert__content">
            By default, Brave is preventing websites from making requests to localhost. This will prevent you from connecting to a local blockchain. If you want to do so, you'll need to <a href="https://support.brave.com/hc/en-us/articles/360023646212-How-do-I-configure-global-and-site-specific-Shields-settings-" target="_blank">disable Shields</a> for this website (app.tryethernal.com).<br>
            If you want to connect to a remote chain, or are not using Brave, you can ignore this message.
            <div class="text-right"><a href="#">Dismiss</a></div>
          </div>
        </div>
      </div>
      <!----> <a id="detectServers" href="#">Detect Networks</a>&nbsp;
      <span class="v-tooltip v-tooltip--top"><!----></span><i aria-hidden="true" class="v-icon notranslate mdi mdi-help-circle-outline theme--light" style="font-size: 16px;"></i>
      <ul style="display: none;"></ul>
      <div style="display: none;">
        No networks detected. If you were expecting something, make sure they are running on 7545, 8545 or 9545 and that your browser is not blocking requests to localhost (looking at you Brave &amp; Safari 👀!).
      </div>
    </div>
    <div role="alert" class="v-alert my-2 v-sheet theme--dark warning" style="display: none;">
      <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
        <div class="v-alert__content">
          It looks like you are trying to connect to a server running on your local network.<br>
          If it is not accessible through https, you will need to <a href="https://experienceleague.adobe.com/docs/target/using/experiences/vec/troubleshoot-composer/mixed-content.html" target="_blank">allow mixed content</a> for this domain (app.tryethernal.com) in order for Ethernal to be able to send request to it.<br>
          Another option is to setup a public URL such as <a href="https://ngrok.com/" target="_blank">ngrok</a>.
          <div class="text-right mt-2"><a href="#">Dismiss</a></div>
        </div>
      </div>
    </div>
    <div class="v-input mb-2 v-input--hide-details theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: 0px;"><span>​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="workspaceName" class="v-label theme--light" style="left: 0px; position: absolute;">Name*</label><input required="required" id="workspaceName" type="text"></div>
        </div>
      </div>
    </div>
    <div class="v-input v-input--hide-details theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: 0px;"><span>​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="workspaceServer" class="v-label theme--light" style="left: 0px; position: absolute;">RPC Server*</label><input required="required" id="workspaceServer" type="text"></div>
        </div>
      </div>
    </div>
    <div class="v-input theme--light v-input--selection-controls v-input--switch">
      <div class="v-input__control">
        <div class="v-input__slot">
          <div class="v-input--selection-controls__input"><input aria-checked="false" id="input-54" role="switch" type="checkbox" aria-disabled="false" value="">
            <div class="v-input--selection-controls__ripple"></div>
            <div class="v-input--switch__track theme--light"></div>
            <div class="v-input--switch__thumb theme--light">
              <transition-stub name="fab-transition" mode="out-in"></transition-stub>
            </div>
          </div><label for="input-54" class="v-label theme--light" style="left: 0px; position: relative;">Internal/Local Network</label>
        </div>
        <div class="v-messages theme--light">
          <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
        </div>
      </div>
    </div>
  </div>
  <div class="v-card__actions">
    <div class="spacer"></div> <button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat theme--light v-size--default" id="createWorkspace"><span class="v-btn__content">Create</span></button>
  </div>
</div>
`;

exports[`CreateWorkspace.vue Should display a warning if browser is Safari 1`] = `
<div class="v-card v-sheet theme--light elevation-0">
  <div class="v-card__text">
    <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text error--text" style="display: none;"></div>
    <div class="mb-2">
      <!---->
      <div role="alert" class="v-alert my-2 v-sheet theme--dark warning">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
          <div class="v-alert__content">
            Safari is preventing websites from making CORS requests to localhost. This will prevent you from connecting to a local blockchain. If you want to do so, you'll need to use another browser.
            If you want to connect to a remote chain, or are not using Safari, you can ignore this message.
          </div>
        </div>
      </div> <a id="detectServers" href="#">Detect Networks</a>&nbsp;
      <span class="v-tooltip v-tooltip--top"><!----><i aria-hidden="true" class="v-icon notranslate mdi mdi-help-circle-outline theme--light" style="font-size: 16px;"></i></span>
      <ul style="display: none;"></ul>
      <div style="display: none;">
        No networks detected. If you were expecting something, make sure they are running on 7545, 8545 or 9545 and that your browser is not blocking requests to localhost (looking at you Brave &amp; Safari 👀!).
      </div>
    </div>
    <div role="alert" class="v-alert my-2 v-sheet theme--dark warning" style="display: none;">
      <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
        <div class="v-alert__content">
          It looks like you are trying to connect to a server running on your local network.<br>
          If it is not accessible through https, you will need to <a href="https://experienceleague.adobe.com/docs/target/using/experiences/vec/troubleshoot-composer/mixed-content.html" target="_blank">allow mixed content</a> for this domain (app.tryethernal.com) in order for Ethernal to be able to send request to it.<br>
          Another option is to setup a public URL such as <a href="https://ngrok.com/" target="_blank">ngrok</a>.
          <div class="text-right mt-2"><a href="#">Dismiss</a></div>
        </div>
      </div>
    </div>
    <div class="v-input mb-2 v-input--hide-details theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: 0px;"><span>​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="workspaceName" class="v-label theme--light" style="left: 0px; position: absolute;">Name*</label><input required="required" id="workspaceName" type="text"></div>
        </div>
      </div>
    </div>
    <div class="v-input v-input--hide-details theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: 0px;"><span>​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="workspaceServer" class="v-label theme--light" style="left: 0px; position: absolute;">RPC Server*</label><input required="required" id="workspaceServer" type="text"></div>
        </div>
      </div>
    </div>
    <div class="v-input theme--light v-input--selection-controls v-input--switch">
      <div class="v-input__control">
        <div class="v-input__slot">
          <div class="v-input--selection-controls__input"><input aria-checked="false" id="input-76" role="switch" type="checkbox" aria-disabled="false" value="">
            <div class="v-input--selection-controls__ripple"></div>
            <div class="v-input--switch__track theme--light"></div>
            <div class="v-input--switch__thumb theme--light">
              <transition-stub name="fab-transition" mode="out-in"></transition-stub>
            </div>
          </div><label for="input-76" class="v-label theme--light" style="left: 0px; position: relative;">Internal/Local Network</label>
        </div>
        <div class="v-messages theme--light">
          <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
        </div>
      </div>
    </div>
  </div>
  <div class="v-card__actions">
    <div class="spacer"></div> <button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat theme--light v-size--default" id="createWorkspace"><span class="v-btn__content">Create</span></button>
  </div>
</div>
`;

exports[`CreateWorkspace.vue Should display a warning if trying to connect to an endpoint in a local network 1`] = `
<div class="v-card v-sheet theme--light elevation-0">
  <div class="v-card__text">
    <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text error--text" style="display: none;"></div>
    <div class="mb-2">
      <!---->
      <div role="alert" class="v-alert my-2 v-sheet theme--dark warning">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
          <div class="v-alert__content">
            Safari is preventing websites from making CORS requests to localhost. This will prevent you from connecting to a local blockchain. If you want to do so, you'll need to use another browser.
            If you want to connect to a remote chain, or are not using Safari, you can ignore this message.
          </div>
        </div>
      </div> <a id="detectServers" href="#">Detect Networks</a>&nbsp;
      <span class="v-tooltip v-tooltip--top"><!----></span><i aria-hidden="true" class="v-icon notranslate mdi mdi-help-circle-outline theme--light" style="font-size: 16px;"></i>
      <ul style="display: none;"></ul>
      <div style="display: none;">
        No networks detected. If you were expecting something, make sure they are running on 7545, 8545 or 9545 and that your browser is not blocking requests to localhost (looking at you Brave &amp; Safari 👀!).
      </div>
    </div>
    <div role="alert" class="v-alert my-2 v-sheet theme--dark warning" style="">
      <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
        <div class="v-alert__content">
          It looks like you are trying to connect to a server running on your local network.<br>
          If it is not accessible through https, you will need to <a href="https://experienceleague.adobe.com/docs/target/using/experiences/vec/troubleshoot-composer/mixed-content.html" target="_blank">allow mixed content</a> for this domain (app.tryethernal.com) in order for Ethernal to be able to send request to it.<br>
          Another option is to setup a public URL such as <a href="https://ngrok.com/" target="_blank">ngrok</a>.
          <div class="text-right mt-2"><a href="#">Dismiss</a></div>
        </div>
      </div>
    </div>
    <div class="v-input mb-2 v-input--hide-details theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: 0px;"><span>​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="workspaceName" class="v-label theme--light" style="left: 0px; position: absolute;">Name*</label><input required="required" id="workspaceName" type="text"></div>
        </div>
      </div>
    </div>
    <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: -24px;"><span>​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="workspaceServer" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">RPC Server*</label><input required="required" id="workspaceServer" type="text"></div>
        </div>
      </div>
    </div>
    <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--switch primary--text">
      <div class="v-input__control">
        <div class="v-input__slot">
          <div class="v-input--selection-controls__input"><input aria-checked="true" id="input-96" role="switch" type="checkbox" aria-disabled="false" value="">
            <div class="v-input--selection-controls__ripple primary--text"></div>
            <div class="v-input--switch__track theme--light primary--text"></div>
            <div class="v-input--switch__thumb theme--light primary--text">
              <transition-stub name="fab-transition" mode="out-in"></transition-stub>
            </div>
          </div><label for="input-96" class="v-label theme--light" style="left: 0px; position: relative;">Internal/Local Network</label>
        </div>
        <div class="v-messages theme--light primary--text">
          <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
        </div>
      </div>
    </div>
  </div>
  <div class="v-card__actions">
    <div class="spacer"></div> <button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat theme--light v-size--default" id="createWorkspace"><span class="v-btn__content">Create</span></button>
  </div>
</div>
`;

exports[`CreateWorkspace.vue Should display a warning if trying to connect to an endpoint in a local network that does not look like one 1`] = `
<div class="v-card v-sheet theme--light elevation-0">
  <div class="v-card__text">
    <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text error--text" style="display: none;"></div>
    <div class="mb-2">
      <!---->
      <div role="alert" class="v-alert my-2 v-sheet theme--dark warning">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
          <div class="v-alert__content">
            Safari is preventing websites from making CORS requests to localhost. This will prevent you from connecting to a local blockchain. If you want to do so, you'll need to use another browser.
            If you want to connect to a remote chain, or are not using Safari, you can ignore this message.
          </div>
        </div>
      </div> <a id="detectServers" href="#">Detect Networks</a>&nbsp;
      <span class="v-tooltip v-tooltip--top"><!----></span><i aria-hidden="true" class="v-icon notranslate mdi mdi-help-circle-outline theme--light" style="font-size: 16px;"></i>
      <ul style="display: none;"></ul>
      <div style="display: none;">
        No networks detected. If you were expecting something, make sure they are running on 7545, 8545 or 9545 and that your browser is not blocking requests to localhost (looking at you Brave &amp; Safari 👀!).
      </div>
    </div>
    <div role="alert" class="v-alert my-2 v-sheet theme--dark warning" style="">
      <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
        <div class="v-alert__content">
          It looks like you are trying to connect to a server running on your local network.<br>
          If it is not accessible through https, you will need to <a href="https://experienceleague.adobe.com/docs/target/using/experiences/vec/troubleshoot-composer/mixed-content.html" target="_blank">allow mixed content</a> for this domain (app.tryethernal.com) in order for Ethernal to be able to send request to it.<br>
          Another option is to setup a public URL such as <a href="https://ngrok.com/" target="_blank">ngrok</a>.
          <div class="text-right mt-2"><a href="#">Dismiss</a></div>
        </div>
      </div>
    </div>
    <div class="v-input mb-2 v-input--hide-details theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: 0px;"><span>​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="workspaceName" class="v-label theme--light" style="left: 0px; position: absolute;">Name*</label><input required="required" id="workspaceName" type="text"></div>
        </div>
      </div>
    </div>
    <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: -24px;"><span>​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="workspaceServer" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">RPC Server*</label><input required="required" id="workspaceServer" type="text"></div>
        </div>
      </div>
    </div>
    <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--switch primary--text">
      <div class="v-input__control">
        <div class="v-input__slot">
          <div class="v-input--selection-controls__input"><input aria-checked="true" id="input-116" role="switch" type="checkbox" aria-disabled="false" value="">
            <div class="v-input--selection-controls__ripple primary--text"></div>
            <div class="v-input--switch__track theme--light primary--text"></div>
            <div class="v-input--switch__thumb theme--light primary--text">
              <transition-stub name="fab-transition" mode="out-in"></transition-stub>
            </div>
          </div><label for="input-116" class="v-label theme--light" style="left: 0px; position: relative;">Internal/Local Network</label>
        </div>
        <div class="v-messages theme--light primary--text">
          <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
        </div>
      </div>
    </div>
  </div>
  <div class="v-card__actions">
    <div class="spacer"></div> <button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat theme--light v-size--default" id="createWorkspace"><span class="v-btn__content">Create</span></button>
  </div>
</div>
`;

exports[`CreateWorkspace.vue Should display an error if it cannot connect to the chain 1`] = `
<div class="v-card v-sheet theme--light elevation-0">
  <div class="v-card__text">
    <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text error--text" style="">Can't connect to <b>http://127.0.0.1</b>. Please make sure hostname and ports are correct, and that a server is listening on those. If you still can't connect to a local server, check that your browser is not blocking requests to localhost (for Brave, you need to disable Shields).</div>
    <div class="mb-2">
      <!---->
      <div role="alert" class="v-alert my-2 v-sheet theme--dark warning">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
          <div class="v-alert__content">
            Safari is preventing websites from making CORS requests to localhost. This will prevent you from connecting to a local blockchain. If you want to do so, you'll need to use another browser.
            If you want to connect to a remote chain, or are not using Safari, you can ignore this message.
          </div>
        </div>
      </div> <a id="detectServers" href="#">Detect Networks</a>&nbsp;
      <span class="v-tooltip v-tooltip--top"><!----></span><i aria-hidden="true" class="v-icon notranslate mdi mdi-help-circle-outline theme--light" style="font-size: 16px;"></i>
      <ul style="display: none;"></ul>
      <div style="display: none;">
        No networks detected. If you were expecting something, make sure they are running on 7545, 8545 or 9545 and that your browser is not blocking requests to localhost (looking at you Brave &amp; Safari 👀!).
      </div>
    </div>
    <div role="alert" class="v-alert my-2 v-sheet theme--dark warning" style="display: none;">
      <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
        <div class="v-alert__content">
          It looks like you are trying to connect to a server running on your local network.<br>
          If it is not accessible through https, you will need to <a href="https://experienceleague.adobe.com/docs/target/using/experiences/vec/troubleshoot-composer/mixed-content.html" target="_blank">allow mixed content</a> for this domain (app.tryethernal.com) in order for Ethernal to be able to send request to it.<br>
          Another option is to setup a public URL such as <a href="https://ngrok.com/" target="_blank">ngrok</a>.
          <div class="text-right mt-2"><a href="#">Dismiss</a></div>
        </div>
      </div>
    </div>
    <div class="v-input mb-2 v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: -24px;"><span>​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="workspaceName" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Name*</label><input required="required" id="workspaceName" type="text"></div>
        </div>
      </div>
    </div>
    <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: -24px;"><span>​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="workspaceServer" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">RPC Server*</label><input required="required" id="workspaceServer" type="text"></div>
        </div>
      </div>
    </div>
    <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--switch primary--text">
      <div class="v-input__control">
        <div class="v-input__slot">
          <div class="v-input--selection-controls__input"><input aria-checked="true" id="input-36" role="switch" type="checkbox" aria-disabled="false" value="">
            <div class="v-input--selection-controls__ripple primary--text"></div>
            <div class="v-input--switch__track theme--light primary--text"></div>
            <div class="v-input--switch__thumb theme--light primary--text">
              <transition-stub name="fab-transition" mode="out-in"></transition-stub>
            </div>
          </div><label for="input-36" class="v-label theme--light" style="left: 0px; position: relative;">Internal/Local Network</label>
        </div>
        <div class="v-messages theme--light primary--text">
          <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
        </div>
      </div>
    </div>
  </div>
  <div class="v-card__actions">
    <div class="spacer"></div> <button type="button" class="v-btn v-btn--contained v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary" id="createWorkspace"><span class="v-btn__content">Create</span></button>
  </div>
</div>
`;

exports[`CreateWorkspace.vue Should display locally running networks 1`] = `
<div class="v-card v-sheet theme--light elevation-0">
  <div class="v-card__text">
    <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text error--text" style="display: none;"></div>
    <div class="mb-2">
      <!---->
      <div role="alert" class="v-alert my-2 v-sheet theme--dark warning">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
          <div class="v-alert__content">
            Safari is preventing websites from making CORS requests to localhost. This will prevent you from connecting to a local blockchain. If you want to do so, you'll need to use another browser.
            If you want to connect to a remote chain, or are not using Safari, you can ignore this message.
          </div>
        </div>
      </div> <a id="detectServers" href="#">Detect Networks</a>&nbsp;
      <span class="v-tooltip v-tooltip--top"><!----></span><i aria-hidden="true" class="v-icon notranslate mdi mdi-help-circle-outline theme--light" style="font-size: 16px;"></i>
      <ul style="">
        <li>
          http://127.0.0.1:8545&nbsp;<a href="#" id="serverDetected-0">Use</a></li>
      </ul>
      <div style="display: none;">
        No networks detected. If you were expecting something, make sure they are running on 7545, 8545 or 9545 and that your browser is not blocking requests to localhost (looking at you Brave &amp; Safari 👀!).
      </div>
    </div>
    <div role="alert" class="v-alert my-2 v-sheet theme--dark warning" style="display: none;">
      <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
        <div class="v-alert__content">
          It looks like you are trying to connect to a server running on your local network.<br>
          If it is not accessible through https, you will need to <a href="https://experienceleague.adobe.com/docs/target/using/experiences/vec/troubleshoot-composer/mixed-content.html" target="_blank">allow mixed content</a> for this domain (app.tryethernal.com) in order for Ethernal to be able to send request to it.<br>
          Another option is to setup a public URL such as <a href="https://ngrok.com/" target="_blank">ngrok</a>.
          <div class="text-right mt-2"><a href="#">Dismiss</a></div>
        </div>
      </div>
    </div>
    <div class="v-input mb-2 v-input--hide-details theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: 0px;"><span>​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="workspaceName" class="v-label theme--light" style="left: 0px; position: absolute;">Name*</label><input required="required" id="workspaceName" type="text"></div>
        </div>
      </div>
    </div>
    <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: -24px;"><span>​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="workspaceServer" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">RPC Server*</label><input required="required" id="workspaceServer" type="text"></div>
        </div>
      </div>
    </div>
    <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--switch primary--text">
      <div class="v-input__control">
        <div class="v-input__slot">
          <div class="v-input--selection-controls__input"><input aria-checked="true" id="input-156" role="switch" type="checkbox" aria-disabled="false" value="">
            <div class="v-input--selection-controls__ripple primary--text"></div>
            <div class="v-input--switch__track theme--light primary--text"></div>
            <div class="v-input--switch__thumb theme--light primary--text">
              <transition-stub name="fab-transition" mode="out-in"></transition-stub>
            </div>
          </div><label for="input-156" class="v-label theme--light" style="left: 0px; position: relative;">Internal/Local Network</label>
        </div>
        <div class="v-messages theme--light primary--text">
          <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
        </div>
      </div>
    </div>
  </div>
  <div class="v-card__actions">
    <div class="spacer"></div> <button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat theme--light v-size--default" id="createWorkspace"><span class="v-btn__content">Create</span></button>
  </div>
</div>
`;

exports[`CreateWorkspace.vue Should not allow multiple workspaces with the same name 1`] = `
<div class="v-card v-sheet theme--light elevation-0">
  <div class="v-card__text">
    <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text error--text" style="">A workspace with this name already exists.</div>
    <div class="mb-2">
      <!---->
      <div role="alert" class="v-alert my-2 v-sheet theme--dark warning">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
          <div class="v-alert__content">
            Safari is preventing websites from making CORS requests to localhost. This will prevent you from connecting to a local blockchain. If you want to do so, you'll need to use another browser.
            If you want to connect to a remote chain, or are not using Safari, you can ignore this message.
          </div>
        </div>
      </div> <a id="detectServers" href="#">Detect Networks</a>&nbsp;
      <span class="v-tooltip v-tooltip--top"><!----></span><i aria-hidden="true" class="v-icon notranslate mdi mdi-help-circle-outline theme--light" style="font-size: 16px;"></i>
      <ul style="display: none;"></ul>
      <div style="display: none;">
        No networks detected. If you were expecting something, make sure they are running on 7545, 8545 or 9545 and that your browser is not blocking requests to localhost (looking at you Brave &amp; Safari 👀!).
      </div>
    </div>
    <div role="alert" class="v-alert my-2 v-sheet theme--dark warning" style="display: none;">
      <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
        <div class="v-alert__content">
          It looks like you are trying to connect to a server running on your local network.<br>
          If it is not accessible through https, you will need to <a href="https://experienceleague.adobe.com/docs/target/using/experiences/vec/troubleshoot-composer/mixed-content.html" target="_blank">allow mixed content</a> for this domain (app.tryethernal.com) in order for Ethernal to be able to send request to it.<br>
          Another option is to setup a public URL such as <a href="https://ngrok.com/" target="_blank">ngrok</a>.
          <div class="text-right mt-2"><a href="#">Dismiss</a></div>
        </div>
      </div>
    </div>
    <div class="v-input mb-2 v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: -24px;"><span>​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="workspaceName" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Name*</label><input required="required" id="workspaceName" type="text"></div>
        </div>
      </div>
    </div>
    <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: -24px;"><span>​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="workspaceServer" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">RPC Server*</label><input required="required" id="workspaceServer" type="text"></div>
        </div>
      </div>
    </div>
    <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--switch primary--text">
      <div class="v-input__control">
        <div class="v-input__slot">
          <div class="v-input--selection-controls__input"><input aria-checked="true" id="input-176" role="switch" type="checkbox" aria-disabled="false" value="">
            <div class="v-input--selection-controls__ripple primary--text"></div>
            <div class="v-input--switch__track theme--light primary--text"></div>
            <div class="v-input--switch__thumb theme--light primary--text">
              <transition-stub name="fab-transition" mode="out-in"></transition-stub>
            </div>
          </div><label for="input-176" class="v-label theme--light" style="left: 0px; position: relative;">Internal/Local Network</label>
        </div>
        <div class="v-messages theme--light primary--text">
          <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
        </div>
      </div>
    </div>
  </div>
  <div class="v-card__actions">
    <div class="spacer"></div> <button type="button" class="v-btn v-btn--contained v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary" id="createWorkspace"><span class="v-btn__content">Create</span></button>
  </div>
</div>
`;

exports[`CreateWorkspace.vue Should not display a warning if trying to connect to localhost 1`] = `
<div class="v-card v-sheet theme--light elevation-0">
  <div class="v-card__text">
    <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text error--text" style="display: none;"></div>
    <div class="mb-2">
      <!---->
      <div role="alert" class="v-alert my-2 v-sheet theme--dark warning">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
          <div class="v-alert__content">
            Safari is preventing websites from making CORS requests to localhost. This will prevent you from connecting to a local blockchain. If you want to do so, you'll need to use another browser.
            If you want to connect to a remote chain, or are not using Safari, you can ignore this message.
          </div>
        </div>
      </div> <a id="detectServers" href="#">Detect Networks</a>&nbsp;
      <span class="v-tooltip v-tooltip--top"><!----></span><i aria-hidden="true" class="v-icon notranslate mdi mdi-help-circle-outline theme--light" style="font-size: 16px;"></i>
      <ul style="display: none;"></ul>
      <div style="display: none;">
        No networks detected. If you were expecting something, make sure they are running on 7545, 8545 or 9545 and that your browser is not blocking requests to localhost (looking at you Brave &amp; Safari 👀!).
      </div>
    </div>
    <div role="alert" class="v-alert my-2 v-sheet theme--dark warning" style="display: none;">
      <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
        <div class="v-alert__content">
          It looks like you are trying to connect to a server running on your local network.<br>
          If it is not accessible through https, you will need to <a href="https://experienceleague.adobe.com/docs/target/using/experiences/vec/troubleshoot-composer/mixed-content.html" target="_blank">allow mixed content</a> for this domain (app.tryethernal.com) in order for Ethernal to be able to send request to it.<br>
          Another option is to setup a public URL such as <a href="https://ngrok.com/" target="_blank">ngrok</a>.
          <div class="text-right mt-2"><a href="#">Dismiss</a></div>
        </div>
      </div>
    </div>
    <div class="v-input mb-2 v-input--hide-details theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: 0px;"><span>​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="workspaceName" class="v-label theme--light" style="left: 0px; position: absolute;">Name*</label><input required="required" id="workspaceName" type="text"></div>
        </div>
      </div>
    </div>
    <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder">
      <div class="v-input__control">
        <div class="v-input__slot">
          <fieldset aria-hidden="true">
            <legend style="width: -24px;"><span>​</span></legend>
          </fieldset>
          <div class="v-text-field__slot"><label for="workspaceServer" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">RPC Server*</label><input required="required" id="workspaceServer" type="text"></div>
        </div>
      </div>
    </div>
    <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--switch primary--text">
      <div class="v-input__control">
        <div class="v-input__slot">
          <div class="v-input--selection-controls__input"><input aria-checked="true" id="input-136" role="switch" type="checkbox" aria-disabled="false" value="">
            <div class="v-input--selection-controls__ripple primary--text"></div>
            <div class="v-input--switch__track theme--light primary--text"></div>
            <div class="v-input--switch__thumb theme--light primary--text">
              <transition-stub name="fab-transition" mode="out-in"></transition-stub>
            </div>
          </div><label for="input-136" class="v-label theme--light" style="left: 0px; position: relative;">Internal/Local Network</label>
        </div>
        <div class="v-messages theme--light primary--text">
          <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
        </div>
      </div>
    </div>
  </div>
  <div class="v-card__actions">
    <div class="spacer"></div> <button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat theme--light v-size--default" id="createWorkspace"><span class="v-btn__content">Create</span></button>
  </div>
</div>
`;
